- add größe bearbeiten und löschen

--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/sizes/system-groessen.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/sizes/system-groessen.component.html
@@ -14,8 +14,14 @@
         </terra-button>
         <terra-button [inputCaption]="'Bestandswarnung erstellen'"
                       [inputIcon]="'icon-edit'"
-                      [inputIsDisabled]="true"
+                      [inputIsDisabled]="selection.selected.length === 0"
                       (outputClicked)="createBestandWarnung()">
+        </terra-button>
+        <terra-button inputCaption="Größe löschen"
+                        inputIcon="icon-delete"
+                        [inputIsDisabled]="selection.selected.length === 0"
+                        (outputClicked)="deleteGroesse()">
+
         </terra-button>
     </terra-portlet>
 
