--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -27,36 +27,6 @@
         <div class="mat-elevation-z8">
             <table class="w-100" mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
-<!--                &lt;!&ndash; Benutzer Column &ndash;&gt;-->
-<!--                <ng-container matColumnDef="name">-->
-<!--                    <th mat-header-cell *matHeaderCellDef> Benutzer </th>-->
-<!--                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>-->
-<!--                </ng-container>-->
-
-<!--                &lt;!&ndash; Von Column &ndash;&gt;-->
-<!--                <ng-container matColumnDef="von">-->
-<!--                    <th mat-header-cell *matHeaderCellDef> Von </th>-->
-<!--                    <td mat-cell *matCellDef="let element"> {{element.von}} </td>-->
-<!--                </ng-container>-->
-
-<!--                &lt;!&ndash; Nach Column &ndash;&gt;-->
-<!--                <ng-container matColumnDef="nach">-->
-<!--                    <th mat-header-cell *matHeaderCellDef> Nach </th>-->
-<!--                    <td mat-cell *matCellDef="let element"> {{element.nach}} </td>-->
-<!--                </ng-container>-->
-
-<!--                &lt;!&ndash; Date Column &ndash;&gt;-->
-<!--                <ng-container matColumnDef="date">-->
-<!--                    <th mat-header-cell *matHeaderCellDef> Gebucht am </th>-->
-<!--                    <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>-->
-<!--                </ng-container>-->
-
-<!--                &lt;!&ndash; Anzahl Column &ndash;&gt;-->
-<!--                <ng-container matColumnDef="anzahl">-->
-<!--                    <th mat-header-cell *matHeaderCellDef> Anzahl </th>-->
-<!--                    <td mat-cell *matCellDef="let element"> {{element.anzahl}} </td>-->
-<!--                </ng-container>-->
-
                 <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
                     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
                     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
@@ -68,7 +38,7 @@
                         <div class="example-element-detail"
                              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                             <div class="example-element-description">
-                                <div *ngFor="let position of element.positionen">{{ position.kategorie }} + {{ position.groesse }} + {{ position.anzahl }}</div>
+                                <div *ngFor="let position of element.positionen">Es wurde(n) {{ position.anzahl }} Gegenstand der Kategorie "{{ position.kategorie }}" in der Größe {{ position.groesse }} gebucht!</div>
                             </div>
                         </div>
                     </td>
