--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -9,7 +9,7 @@
 
         <div class="infoText">
             Hallo und herzlich Willkommen in der digitalen Kleiderverwaltung! <br>
-            Dieses Programm wurde im Rahmen eines Sofwtareprojekts an der Hochschule Fulda von Achim Rose und Tim Wieder geschrieben.
+            Dieses Programm wurde im Rahmen eines Softwareprojekts an der Hochschule Fulda von Achim Rose und Tim Wieder geschrieben.
             Informationen dazu, sowie die Dokumentation des Quellcodes und der Schnittstellen können einfach<br>
             <a href="https://github.com/argh87/de.hs-fulda.et.it.project/wiki">hier</a>
             <br>
