--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/new-password/new-password.component.scss
@@ -1,7 +1,6 @@
-.new-password
-{
-  display: block;
-  width: 35%;
-  left: 26%;
-  position: relative;
+.new-password {
+    display: block;
+    width: 35%;
+    left: 26%;
+    position: relative;
 }
