--- a/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/booking/booking-view.component.scss
@@ -19,45 +19,37 @@
     padding-top: 20px;
 }
 
-.action
-{
+.action {
     margin-right: 10px;
 }
 
-mat-radio-button
-{
+mat-radio-button {
     margin-right: 10px;
 }
 
-mat-expansion-panel
-{
+mat-expansion-panel {
     margin-bottom: 10px;
 }
 
-mat-form-field
-{
+mat-form-field {
     margin-right: 10px;
-
-    input
-    {
+    
+    input {
         font-size: 18px !important;
         margin: 0 !important;
         line-height: 2.6 !important;
     }
 }
 
-terra-number-input
-{
+terra-number-input {
     padding-top: 3px;
 }
 
-.warenkorb
-{
+.warenkorb {
     width: 100%;
 }
 
-.overview .save-button
-{
+.overview .save-button {
     margin-top: 15px;
 }
 
