--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/dialog/lock-targetplace-dialog.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/targetplaces/dialog/lock-targetplace-dialog.component.html
@@ -1,7 +1,8 @@
 <h2 mat-dialog-title>Zielort für Erfassung sperren</h2>
 
 <div mat-dialog-content>
-    <p>Sind Sie sich sicher, dass Sie den Zielort für die Erfassung sperren wollen? Danach können keine Bestände mehr eingetragen oder bearbeitet werden. Dieser Vorgang kann nicht rückgängig gemacht werden!</p>
+    <p>Sind Sie sich sicher, dass Sie den Zielort für die Erfassung sperren wollen? Danach können keine Bestände mehr eingetragen oder
+        bearbeitet werden. Dieser Vorgang kann nicht rückgängig gemacht werden!</p>
 </div>
 <div mat-dialog-actions>
     <button mat-raised-button color="primary" (click)="dialogRef.close(true)">Sperren</button>
