--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -3,7 +3,9 @@
         <div class="user_card">
             <div class="d-flex justify-content-center">
                 <div class="brand_logo_container">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Wappen_Deutscher_Feuerwehr_Verband.svg/2000px-Wappen_Deutscher_Feuerwehr_Verband.svg.png" class="brand_logo" alt="Logo">
+                    <img
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Wappen_Deutscher_Feuerwehr_Verband.svg/2000px-Wappen_Deutscher_Feuerwehr_Verband.svg.png"
+                        class="brand_logo" alt="Logo">
                 </div>
             </div>
             <div class="d-flex justify-content-center form_container">
@@ -24,11 +26,11 @@
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
                         <input id="password"
-                                type="password"
+                               type="password"
                                name="password"
                                class="form-control input_pass"
                                value=""
-                               [(ngModel)] = "user.password"
+                               [(ngModel)]="user.password"
                                placeholder="{{'login.password' | translate:lang}}">
                     </div>
                 </form>
