--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="!globalRegistryService.isLoginActive" class="navigation-bar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-brand">WBS Kleiderkammer</div>
-        <button (click)="toggleMenu()" id="toggler-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button (click)="toggleMenu()" id="toggler-button" class="navbar-toggler" type="button" data-toggle="collapse"
+                                       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                                       aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" *ngFor="let item of menu">
