--- a/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/start/start.component.html
@@ -1,59 +1,61 @@
 <ng-container *ngIf="routeData$ | async as routeData">
-<div class="infos">
-    <mat-expansion-panel class="panel" expanded="true">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Informationen über das Programm
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <div class="infoText">
-            Hallo und herzlich Willkommen in der digitalen Kleiderverwaltung! <br>
-            Dieses Programm wurde im Rahmen eines Softwareprojekts an der Hochschule Fulda von Achim Rose und Tim Wieder geschrieben.
-            Informationen dazu, sowie die Dokumentation des Quellcodes und der Schnittstellen können einfach<br>
-            <a href="https://github.com/argh87/de.hs-fulda.et.it.project/wiki">hier</a>
-            <br>
-            eingesehen werden
-        </div>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel class="panel" expanded="true">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Letzte Buchungen
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <div class="mat-elevation-z8">
-            <table class="w-100" mat-table [dataSource]="dataSource" multiTemplateDataRows>
-
-                <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
-                    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-                    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-                </ng-container>
-
-                <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-                <ng-container matColumnDef="expandedDetail">
-                    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                        <div class="example-element-detail"
-                             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="example-element-description">
-                                <div *ngFor="let position of element.positionen">Es wurde(n) {{ position.anzahl }} Gegenstand der Kategorie "{{ position.kategorie }}" in der Größe {{ position.groesse }} gebucht!</div>
+    <div class="infos">
+        <mat-expansion-panel class="panel" expanded="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Informationen über das Programm
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            
+            <div class="infoText">
+                Hallo und herzlich Willkommen in der digitalen Kleiderverwaltung! <br>
+                Dieses Programm wurde im Rahmen eines Softwareprojekts an der Hochschule Fulda von Achim Rose und Tim Wieder geschrieben.
+                Informationen dazu, sowie die Dokumentation des Quellcodes und der Schnittstellen können einfach<br>
+                <a href="https://github.com/argh87/de.hs-fulda.et.it.project/wiki">hier</a>
+                <br>
+                eingesehen werden
+            </div>
+        </mat-expansion-panel>
+        
+        <mat-expansion-panel class="panel" expanded="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Letzte Buchungen
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            
+            <div class="mat-elevation-z8">
+                <table class="w-100" mat-table [dataSource]="dataSource" multiTemplateDataRows>
+                    
+                    <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
+                        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+                        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+                    </ng-container>
+                    
+                    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                    <ng-container matColumnDef="expandedDetail">
+                        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                            <div class="example-element-detail"
+                                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                                <div class="example-element-description">
+                                    <div *ngFor="let position of element.positionen">Es wurde(n) {{ position.anzahl }} Gegenstand der
+                                        Kategorie "{{ position.kategorie }}" in der Größe {{ position.groesse }} gebucht!
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"
-                    [class.example-expanded-row]="expandedElement === row"
-                    (click)="expandedElement = expandedElement === row ? null : row"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="expanded-detail-row" style="height: 0px;"></tr>
-            </table>
-
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </div>
-    </mat-expansion-panel>
-
-</div>
+                        </td>
+                    </ng-container>
+                    
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"
+                        [class.example-expanded-row]="expandedElement === row"
+                        (click)="expandedElement = expandedElement === row ? null : row"></tr>
+                    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="expanded-detail-row" style="height: 0px;"></tr>
+                </table>
+                
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </div>
+        </mat-expansion-panel>
+    
+    </div>
 </ng-container>
