--- a/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/system/components/authorities/system-authorities.compontent.html
@@ -1,30 +1,17 @@
 <ng-container *ngIf="routeData$ | async as routeData">
-
+    
     <mat-expansion-panel expanded="true">
         <mat-expansion-panel-header>
-
+        
         </mat-expansion-panel-header>
-
+        
         <div class="save-button">
-            <button mat-raised-button color="primary" (click)="saveBerechtigungen()"><span class="mr-1 icon-save"></span>Berechtigungen speichern</button>
+            <button mat-raised-button color="primary" (click)="saveBerechtigungen()"><span class="mr-1 icon-save"></span>Berechtigungen
+                speichern
+            </button>
         </div>
         <div>
             <terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>
         </div>
     </mat-expansion-panel>
-
-<!--<terra-portlet [inputPortletHeader]="'Berechtigungen'">-->
-<!--    -->
-<!--    <div class="save-button">-->
-<!--        <terra-button [inputCaption]="'Berechtigungen speichern'"-->
-<!--                      [inputIcon]="'icon-save'"-->
-<!--                      (outputClicked)="saveBerechtigungen()">-->
-<!--        -->
-<!--        </terra-button>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <terra-multi-check-box [(ngModel)]="values"></terra-multi-check-box>-->
-<!--    </div>-->
-<!--    -->
-<!--</terra-portlet>-->
 </ng-container>
