- updated material to v11 and fixed resulting errors

--- a/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/app-login/app-login.component.html
@@ -19,7 +19,7 @@
                                class="form-control input_user"
                                value=""
                                [(ngModel)]="user.name"
-                               placeholder="{{'login.username' | translate:lang}}">
+                               placeholder="Benutzername">
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-append">
@@ -31,7 +31,7 @@
                                class="form-control input_pass"
                                value=""
                                [(ngModel)]="user.password"
-                               placeholder="{{'login.password' | translate:lang}}">
+                               placeholder="Passwort">
                     </div>
                 </form>
             </div>
