--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.html
@@ -15,6 +15,7 @@
             </ul>
             <div class="form-inline my-2 my-lg-0 right">
                 <span id="logout" class="icon icon-logout logout" (click)="logout()">
+                    <button mat-button>Logout</button>
                 </span>
                 <img id="user-icon" class="my-2 my-sm-0 user-icon" [src]="userImageLink"/>
             </div>
