--- a/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
+++ b/wbs-alarm/wbs-frontend/src/app/views/navigation-bar/navigation-bar.component.scss
@@ -25,9 +25,9 @@ nav {
 
 .logout {
     color: white;
-    margin-right: 15px;
-    cursor: pointer;
-    font-size: 34px;
+    //margin-right: 15px;
+    //cursor: pointer;
+    //font-size: 34px;
 }
 
 
